# taskgen

./: .gitignore  Agent.ipynb  PyGame_Essay_Creator.ipynb  README.md  StrictJSON.ipynb  TaskGen AMA_07May2024.ipynb  TaskGen AMA_18May2024.ipynb  TaskGen Ask Me Anything.ipynb  Tutorial 0 - StrictJSON.ipynb  Tutorial 1 - Agent.ipynb  Tutorial 2 - Hierarchical Agents.ipynb  Tutorial 2 - Shared Variables and Global Context.ipynb  Tutorial 3 - Memory.ipynb  Tutorial 3 - Shared Variables.ipynb  Tutorial 4 - Hierarchical Agents.ipynb  Tutorial 4 - Memory.ipynb  Tutorial 5 - Additional Context-Copy1.ipynb  Tutorial 5 - Additional Context.ipynb  Tutorial 5 - CodeGen and External Function Interfacing.ipynb  Tutorial 6 - Conversation Class.ipynb  Tutorial 6 - External Function Interfacing.ipynb  Tutorial 6 - Planner.ipynb  Tutorial 7 - Conversation Class.ipynb  Tutorial 8 - Async StrictJSON and Functions.ipynb  Tutorial 9 - Async Agent.ipynb  agent.py  changelog.txt  myagent.pkl  pyproject.toml  requirements.txt  setup.py
Paper/: README.md
Paper/math_dataset/: math.ipynb  readme.md  selected_problems_level_5.json
Paper/maze_navigator/: Maze Navigator.ipynb
Paper/naturalquestions_rag/: predictions_interactive.json  readme.md
contrib/: PyGame_Essay_Creator.ipynb  README.md  edge_detection.ipynb
images/: README.md
resources/: Agentic_Systems.ipynb  Agentic_Systems.pptx  README.md  TaskGen AMA_07May2024.ipynb
taskgen/: __init__.py  agent.py  agent_backup.py  base.py  base_async.py  conversation.py  function.py  memory.py  ranker.py  utils.py  wrapper.py
(+44 files in other folders)
