[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taskgen-ai"
version = "1.0.0"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "A Task-based agentic framework building on StrictJSON outputs by LLM agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["openai==1.3.6"]

[project.urls]
Homepage = "https://github.com/simbianai/taskgen"
Issues = "https://github.com/simbianai/taskgen/issues"